chore: change app name

--- a/FinanceApp/Info.plist
+++ b/FinanceApp/Info.plist
@@ -32,7 +32,7 @@
 	<key>CFBundleName</key>
 	<string>$(PRODUCT_NAME)</string>
 	<key>CFBundleDisplayName</key>
-	<string>Swift Finance</string>
+	<string>FinFlow</string>
 	<key>CFBundleIdentifier</key>
 	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleVersion</key>
