--- a/.github/workflows/deploy-testflight.yml
+++ b/.github/workflows/deploy-testflight.yml
@@ -25,7 +25,7 @@ env:
 jobs:
   deploy:
     name: 🚀 Deploy Beta to TestFlight
-    runs-on: macos-14
+    runs-on: macos-15
     if: github.ref == 'refs/heads/develop'
 
     steps:
@@ -38,7 +38,7 @@ jobs:
       - name: Select Xcode version
         uses: maxim-lobanov/setup-xcode@v1
         with:
-          xcode-version: latest
+          xcode-version: "16.2.0"
 
       - name: Cache CocoaPods
         uses: actions/cache@v4
