--- a/.github/workflows/develop-ci.yml
+++ b/.github/workflows/develop-ci.yml
@@ -14,7 +14,7 @@ env:
 jobs:
   test:
     name: 🧪 Run Tests & Lint
-    runs-on: macos-14
+    runs-on: macos-15
 
     steps:
       - name: Checkout code
@@ -25,7 +25,7 @@ jobs:
       - name: Select Xcode version
         uses: maxim-lobanov/setup-xcode@v1
         with:
-          xcode-version: latest
+          xcode-version: "16.2.0"
 
       - name: Cache CocoaPods
         uses: actions/cache@v4
@@ -51,14 +51,14 @@ jobs:
         run: |
           xcodebuild -workspace ${{ env.XCODE_PROJECT }} \
                      -scheme ${{ env.SCHEME }} \
-                     -destination 'platform=iOS Simulator,name=iPhone 15,OS=latest' \
+                     -destination 'platform=iOS Simulator,name=iPhone 16,OS=latest' \
                      clean build-for-testing
 
       - name: Run unit tests
         run: |
           xcodebuild -workspace ${{ env.XCODE_PROJECT }} \
                      -scheme ${{ env.SCHEME }} \
-                     -destination 'platform=iOS Simulator,name=iPhone 15,OS=latest' \
+                     -destination 'platform=iOS Simulator,name=iPhone 16,OS=latest' \
                      test-without-building \
                      -resultBundlePath TestResults.xcresult
 
@@ -126,7 +126,7 @@ jobs:
       - name: Select Xcode version
         uses: maxim-lobanov/setup-xcode@v1
         with:
-          xcode-version: latest-stable
+          xcode-version: "16.2.0"
 
       - name: Cache CocoaPods
         uses: actions/cache@v4
@@ -147,7 +147,7 @@ jobs:
           xcodebuild -workspace ${{ env.XCODE_PROJECT }} \
                      -scheme ${{ env.SCHEME }} \
                      -configuration Release \
-                     -destination 'platform=iOS Simulator,name=iPhone 15,OS=latest' \
+                     -destination 'platform=iOS Simulator,name=iPhone 16,OS=latest' \
                      clean build
                      
           echo "✅ Release build verification successful!"
