fix: change CI to use full test cycle instead of test-without-building - Local tests pass completely with full build+test cycle - CI test-without-building fails with bundle identifier issues

--- a/.github/workflows/develop-ci.yml
+++ b/.github/workflows/develop-ci.yml
@@ -73,10 +73,11 @@ jobs:
 
       - name: Run unit tests
         run: |
+          echo "🧪 Running tests with full build cycle..."
           xcodebuild -workspace ${{ env.XCODE_PROJECT }} \
                      -scheme ${{ env.SCHEME }} \
                      -destination 'platform=iOS Simulator,name=iPhone 16,OS=latest' \
-                     test-without-building \
+                     test \
                      -resultBundlePath TestResults.xcresult
 
       - name: Upload test results
