--- a/.github/workflows/develop-ci.yml
+++ b/.github/workflows/develop-ci.yml
@@ -7,12 +7,39 @@ on:
     branches: [main, develop]
     types: [opened, synchronize, reopened]
 
+# Add permissions for security scanning
+permissions:
+  contents: read
+  security-events: write
+  actions: read
+
 env:
   DEVELOPER_DIR: /Applications/Xcode.app/Contents/Developer
   XCODE_PROJECT: FinanceApp.xcworkspace
   SCHEME: FinanceApp
 
 jobs:
+  # Separate job for commit message validation on Ubuntu
+  commitlint:
+    name: 📝 Validate Commit Messages
+    runs-on: ubuntu-latest
+    if: github.event_name == 'pull_request'
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Check commit message format
+        uses: wagoid/commitlint-github-action@v5
+        with:
+          configFile: ".commitlintrc.json"
+          failOnWarnings: false
+          failOnErrors: true
+          helpURL: https://github.com/conventional-changelog/commitlint/#what-is-commitlint
+          token: ${{ secrets.GITHUB_TOKEN }}
+
   test:
     name: 🧪 Run Tests & Lint
     runs-on: macos-15
@@ -47,12 +74,6 @@ jobs:
 
       - name: Run SwiftLint
         run: swiftlint lint --reporter github-actions-logging
-
-      - name: Check commit message format
-        uses: wagoid/commitlint-github-action@v5
-        if: github.event_name == 'pull_request'
-        with:
-          configFile: ".commitlintrc.json"
 
       - name: Build for testing
         run: |
@@ -125,11 +146,13 @@ jobs:
         if: always()
         with:
           sarif_file: "trivy-results.sarif"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   semantic-version-develop:
     name: 📦 Development Versioning
     runs-on: ubuntu-latest
-    needs: test
+    needs: [test, commitlint]
     # Run on pushes to develop OR when manually triggered
     if: (github.ref == 'refs/heads/develop' && github.event_name == 'push') || github.event_name == 'workflow_dispatch'
     outputs:
