--- a/.github/workflows/develop-ci.yml
+++ b/.github/workflows/develop-ci.yml
@@ -215,7 +215,7 @@ jobs:
   semantic-version-develop:
     name: 📦 Development Versioning
     runs-on: ubuntu-latest
-    needs: [test, commitlint]
+    needs: [test]
     # Run on pushes to develop OR when manually triggered
     if: (github.ref == 'refs/heads/develop' && github.event_name == 'push') || github.event_name == 'workflow_dispatch'
     outputs:
@@ -257,7 +257,7 @@ jobs:
 
   build-verification:
     name: 🏗️ Build Verification
-    runs-on: macos-14
+    runs-on: macos-15
     needs: [test, semantic-version-develop]
     # Run if semantic versioning job completed (regardless of whether new release was published)
     # or if we're on develop branch and tests passed
