chore: enhance CI workflows by adding cleanup steps for test results - implemented cleanup of existing test results before running tests to ensure a fresh environment and prevent conflicts during the CI process.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,11 +57,14 @@ jobs:
 
       - name: Run unit tests
         run: |
+          # Clean up any existing test results to prevent conflicts
+          rm -rf TestResults.xcresult
           xcodebuild -workspace ${{ env.XCODE_PROJECT }} \
                      -scheme ${{ env.SCHEME }} \
                      -destination 'platform=iOS Simulator,name=iPhone 15,OS=latest' \
                      test-without-building \
-                     -resultBundlePath TestResults.xcresult
+                     -resultBundlePath TestResults.xcresult \
+                     -resultBundleOverwrite
 
       - name: Upload test results
         uses: actions/upload-artifact@v4
