chore: streamline CI workflows by removing redundant result bundle overwrite flag - eliminated the unnecessary overwrite option in test result paths for both CI and develop workflows, simplifying the configuration.

--- a/.github/workflows/develop-ci.yml
+++ b/.github/workflows/develop-ci.yml
@@ -192,8 +192,7 @@ jobs:
                      -scheme ${{ env.SCHEME }} \
                      -destination 'platform=iOS Simulator,name=iPhone 16,OS=latest' \
                      test \
-                     -resultBundlePath TestResults.xcresult \
-                     -resultBundleOverwrite
+                     -resultBundlePath TestResults.xcresult
 
       - name: Mark test results as successful
         id: test-results
