--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,8 +63,7 @@ jobs:
                      -scheme ${{ env.SCHEME }} \
                      -destination 'platform=iOS Simulator,name=iPhone 15,OS=latest' \
                      test-without-building \
-                     -resultBundlePath TestResults.xcresult \
-                     -resultBundleOverwrite
+                     -resultBundlePath TestResults.xcresult
 
       - name: Upload test results
         uses: actions/upload-artifact@v4
