chore: update CI workflows to enhance permissions for security and issue management - added write permissions for contents, issues, and pull requests in both CI and develop workflows to improve security scanning and facilitate semantic release processes.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,12 @@ on:
   pull_request:
     branches: [main]
 
+permissions:
+  contents: write
+  issues: write
+  pull-requests: write
+  id-token: write
+
 env:
   DEVELOPER_DIR: /Applications/Xcode.app/Contents/Developer
   XCODE_PROJECT: FinanceApp.xcworkspace
