--- a/.github/workflows/develop-ci.yml
+++ b/.github/workflows/develop-ci.yml
@@ -7,12 +7,14 @@ on:
     branches: [main, develop]
     types: [opened, synchronize, reopened]
 
-# Add permissions for security scanning
+# Add permissions for security scanning and semantic release
 permissions:
-  contents: read
+  contents: write
   security-events: write
   actions: read
   pull-requests: read
+  issues: write
+  id-token: write
 
 env:
   DEVELOPER_DIR: /Applications/Xcode.app/Contents/Developer
@@ -292,6 +294,11 @@ jobs:
     needs: [test]
     # Run on pushes to develop OR when manually triggered
     if: (github.ref == 'refs/heads/develop' && github.event_name == 'push') || github.event_name == 'workflow_dispatch'
+    permissions:
+      contents: write
+      issues: write
+      pull-requests: write
+      id-token: write
     outputs:
       new_release_published: ${{ steps.semantic.outputs.new_release_published }}
       new_release_version: ${{ steps.semantic.outputs.new_release_version }}
