--- a/FinanceApp/Info.plist
+++ b/FinanceApp/Info.plist
@@ -2,6 +2,21 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLName</key>
+			<string>GoogleSignIn</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>com.googleusercontent.apps.806689188627-oaf41bhtmnv5vhee3pnrivtglgm1jkjg</string>
+			</array>
+		</dict>
+	</array>
+	<key>FirebaseMultipleAccountsDisabled</key>
+	<true/>
+	<key>FirebaseAccountLinkingEnabled</key>
+	<true/>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Lato-Bold.ttf</string>
