ci: migrate to Xcode Cloud and cost-optimized semantic versioning
- Disable expensive GitHub Actions workflows (saves ~/month)
- Create lightweight semantic versioning workflow (Linux only)
- Add ci_scripts for Xcode Cloud CocoaPods integration
- Keep code quality checks and commit validation
- Prepare for full Xcode Cloud migration

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,7 @@
-name: 🚀 CI/CD Pipeline (Cost-Optimized Hybrid)
+name: 🚫 CI/CD Pipeline (DISABLED - Migrating to Xcode Cloud)
 
 on:
-  push:
-    branches: [main]
-  pull_request:
-    branches: [main]
+  workflow_dispatch: # Manual trigger only (effectively disabled)
 
 permissions:
   contents: write
