chore: update docs

--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,35 @@ TestResults.xcresult
 
 # Logs
 *.log
+
+# Documentation build artifacts
+docs/_build/
+docs/build/
+*.html
+swiftlint_report.html
+
+# Personal configuration files
+.env
+.env.local
+.env.development
+.env.production
+config.local.json
+settings.local.json
+
+# Personal notes and documentation
+NOTES.md
+TODO.md
+PERSONAL_*
+*_PERSONAL.*
+personal/
+notes/
+
+# IDE personal settings
+.vscode/settings.json
+.vscode/launch.json
+.idea/workspace.xml
+.idea/tasks.xml
+.idea/dictionaries/
+
+# macOS personal files
+*.icloud
